Info level logging for profiler job
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>